if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(LIBC_NAME libc.so.6)
    set(LIBM_NAME libm.so.6)
    set(LIBPTHREAD_NAME libpthread.so.0)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    set(LIBC_NAME msvcrt.dll)
    set(LIBM_NAME msvcrt.dll)
    set(LIBPTHREAD_NAME libwinpthread-1.dll)
else()
    message(FATAL_ERROR "Platform is not supported")
endif()

configure_file(nkirc.conf.in ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/nkirc.conf)
install(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/nkirc.conf DESTINATION bin)
