def_nkirc_run_test(FILE nkir/aggregate.nkir)
def_nkirc_run_test(FILE nkir/basic.nkir)
def_nkirc_run_test(FILE nkir/casts.nkir)
def_nkirc_run_test(FILE nkir/extern_var.nkir)
def_nkirc_run_test(FILE nkir/ffi_closure.nkir)
def_nkirc_run_test(FILE nkir/global_data.nkir)
def_nkirc_run_test(FILE nkir/global_var.nkir)
def_nkirc_run_test(FILE nkir/hello_world.nkir)
def_nkirc_run_test(FILE nkir/include.nkir)
def_nkirc_run_test(FILE nkir/loop.nkir)
def_nkirc_run_test(FILE nkir/proc.nkir)
def_nkirc_run_test(FILE nkir/syscall.nkir PLATFORM "Linux")
def_nkirc_run_test(FILE nkir/threads.nkir)

def_nkirc_compile_test(FILE nkir/aggregate.nkir ARGS "-lm")
def_nkirc_compile_test(FILE nkir/basic.nkir)
def_nkirc_compile_test(FILE nkir/casts.nkir)
def_nkirc_compile_test(FILE nkir/extern_var.nkir ARGS "-L. -ltest_extern_lib")
def_nkirc_compile_test(FILE nkir/ffi_closure.nkir)
def_nkirc_compile_test(FILE nkir/global_data.nkir)
def_nkirc_compile_test(FILE nkir/global_var.nkir)
def_nkirc_compile_test(FILE nkir/hello_world.nkir)
def_nkirc_compile_test(FILE nkir/include.nkir)
def_nkirc_compile_test(FILE nkir/loop.nkir)
def_nkirc_compile_test(FILE nkir/proc.nkir)
def_nkirc_compile_test(FILE nkir/syscall.nkir PLATFORM "Linux")
def_nkirc_compile_test(FILE nkir/threads.nkir ARGS "-lpthread")

add_subdirectory(test_extern_lib)
