def_nkirc_run_test(FILE nkir/aggregate.nkir)
def_nkirc_run_test(FILE nkir/aggregate_return.nkir)
def_nkirc_run_test(FILE nkir/basic.nkir)
def_nkirc_run_test(FILE nkir/callback.nkir)
def_nkirc_run_test(FILE nkir/casts.nkir)
def_nkirc_run_test(FILE nkir/data_reloc.nkir)
def_nkirc_run_test(FILE nkir/defer.nkir)
def_nkirc_run_test(FILE nkir/ffi_closure.nkir)
def_nkirc_run_test(FILE nkir/global_data.nkir)
def_nkirc_run_test(FILE nkir/global_var.nkir)
def_nkirc_run_test(FILE nkir/hello_world.nkir)
def_nkirc_run_test(FILE nkir/include.nkir)
def_nkirc_run_test(FILE nkir/loop.nkir)
def_nkirc_run_test(FILE nkir/pi.nkir)
def_nkirc_run_test(FILE nkir/proc.nkir)
def_nkirc_run_test(FILE nkir/syscall.nkir PLATFORM Linux)
def_nkirc_run_test(FILE nkir/threads.nkir)

def_nkirc_compile_test(FILE nkir/aggregate.nkir ARGS -lm)
def_nkirc_compile_test(FILE nkir/aggregate_return.nkir)
def_nkirc_compile_test(FILE nkir/basic.nkir)
def_nkirc_compile_test(FILE nkir/callback.nkir)
def_nkirc_compile_test(FILE nkir/casts.nkir)
def_nkirc_compile_test(FILE nkir/data_reloc.nkir)
def_nkirc_compile_test(FILE nkir/defer.nkir)
def_nkirc_compile_test(FILE nkir/ffi_closure.nkir)
def_nkirc_compile_test(FILE nkir/global_data.nkir)
def_nkirc_compile_test(FILE nkir/global_var.nkir)
def_nkirc_compile_test(FILE nkir/hello_world.nkir)
def_nkirc_compile_test(FILE nkir/include.nkir)
def_nkirc_compile_test(FILE nkir/loop.nkir)
def_nkirc_compile_test(FILE nkir/pi.nkir)
def_nkirc_compile_test(FILE nkir/proc.nkir)
def_nkirc_compile_test(FILE nkir/syscall.nkir PLATFORM Linux)
def_nkirc_compile_test(FILE nkir/threads.nkir ARGS -lpthread)

add_subdirectory(test_export)
add_subdirectory(test_import)
